<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/fragment_memos"
        android:icon="@drawable/ic_sticky_note_2_24"
        android:title="@string/memos" />

    <item
        android:id="@+id/fragment_messages"
        android:icon="@drawable/ic_message_24"
        android:title="@string/messagess" />

    <item
        android:id="@+id/fragment_calendar"
        android:icon="@drawable/ic_home_24"
        android:title="@string/calendar" />

    <item
        android:id="@+id/fragment_sales"
        android:icon="@drawable/ic_bar_chart_24"
        android:title="@string/sales" />

    <item
        android:id="@+id/fragment_customers"
        android:icon="@drawable/ic_people_24"
        android:title="@string/customers" />

</menu>